- Timestamp can be provided in nxpush and nxapush
- New methods in NXSL class "Event": setMessage, setSeverity, setUserTag
- Command line options for nxagentd to change effective user and group after start
- Fixed occasional NXSL compiler crash on scripts with syntax errors
- Errors in auto bind/apply scripts interpreted as "ignore" instead of "false" result
- Management console:
	- Fixed broken VPN connectors configuration
	- "Inverted values" option on line charts
	- Filter in predefined graphs tree
	- Values of selected DCIs can be shown on object overview page
	- "Stacked" option added to line charts on dashboards
	- In-place file rename in file manager
	- Option to export data from line charts on dashboard to CSV file
- Fixed issues: #50, #630, #780, #781, #797, #816, #817, #824, #832, #833


*
* 2.0-M4
*

- Script export/import
- Object tools export/import
- DCI summary tables export/import
- Template hierarchy preserved during export/import
- NXSL functions and classes to work with alarms
- MEGATEC protocol support in UPS subagent
- Fixed broken WoL functionality
- Fixed broken PING subagent
- Fixed database upgrade issues on MS SQL
- IPv6 support in PING subagent
- Network device driver can be manually selected for node by setting snmp.driver custom attribute
- Added default melodies for alarms
- Added option to play sound on alarm sound preference page
- Interface objects can be used on network maps
- Android Agent:
	- Added support for Lollipop MR1 (v5.1)
	- Updated support library
- Android Console:
	- Changed order of overview items to match Java console (node browser)
	- Added MTU field in interface details (node browser)
	- Updated support library
- Fixed issues: #655, #657, #696, #701, #724, #799, #800, #803, #804, #805, #811, #812, #813


*
* 2.0-M3
*

- IPv6 support: communications, address information, topology
- New NXSL functions: gethostbyaddr, gethostbyname, md5, sha1, AgentReadList
- Added posibility to wakeup unmanaged node